# Identifierdocuments

./: .cpanel.yml  .gitignore  CLAUDE.md  README.md  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
apps/api/: .env.example  README.md  SECURITY_LOAD_TEST_REPORT.md  package.json
apps/api/scripts/: generate_thumbnail.py
apps/api/scripts/loadtest/: a1-a2-concurrent.ts  a3-rollback-test.ts  a5-bypass-test.ts  b2-latency-benchmark.ts  b3-advisory-lock.ts  quick-a5-test.ts  (+1 more)
apps/api/src/: index.ts
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: identifiers.rs  mod.rs  scanner.rs  text_extraction.rs  watcher.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/sync/: mod.rs
docs/: AUDITORIA_SEGURANCA.md  BACKLOG.md  CLAUDE.md  DOCID_MVP.md  INSTALL_v1.0.0.md  offline-persistence-invariants.md  pesquisa-mercado-docid.md  scenarios-problems.md  sectores_2026-06-25.csv
scripts/: build-windows.sh  cross-build.sh
src/: index.ts
src/db/: index.ts  schema.ts
src/modules/: audit.module.ts  categories.module.ts  documents.module.ts  identifiers.module.ts  stats.module.ts
src/services/: attachment.service.ts  document.service.ts  identifier.service.ts
(+137 files in other folders)
