[package]
name = "docid-desktop"
version = "2.0.0"
edition = "2021"

[lib]
name = "docid_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["time", "rt"] }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "7", features = [] }
notify-debouncer-mini = { version = "0.4", features = [] }
regex = "1"
